# maestro_mujoco

./: .gitignore  README.md  guidline.txt
data/: MJMODEL.TXT  RL_data.csv  data.csv  data_-105.csv  data_-1095.csv  data_-5.csv  data_0.6.csv  data_0.9.csv  data_15.csv  data_7000.csv  data_70000.csv  data_batch20.csv  data_c2_0.2.csv  data_evo_0.csv  data_kv1000.csv  data_kv300.csv  data_mpc_1.csv  data_mpc_3.csv  data_slip_1.csv  data_slip_c1.csv
include/: Controller.h  Data.h  FSM.h  LocomotionController.h  LocomotionTopLevelControl.h  Perception.h  Robot.h  TopLevelControl.h  Wrapper.h  mujoco_pce_params.h  params.h
src/: Controller.cpp  Data.cpp  LocomotionController.cpp  LocomotionTopLevelControl.cpp  MUJOCO_LOG.TXT  Makefile  Perception.cpp  Robot.cpp  TopLevelControl.cpp  TrajController.cpp  Trajectory.cpp  Wrapper.cpp  dynawalkMujoco.cpp  explorationMujoco.cpp  multi_dynawalkMujoco.cpp  params.txt
src/cmake/: CMakeLists.txt
src/cmake/build_mujoco/: CMakeCache.txt  MUJOCO_LOG.TXT  Makefile  cmake_install.cmake  dynawalk
src/create_plots/: a.out  amination-multi-surfaces_plot.py  bez.csv  bezier_dyn.cpp  multi-surfaces_plot.py  paper_weights.py  plot.py  plot_bez.py  plot_compare.py  plot_compare_slip.py  plot_dyna.py  plot_error.py  plot_exp.py  plot_inf.py  plot_loc.py  plot_pce.py  plot_slip.py  plot_traj.py  sig.csv  some  state_plot.py  step.csv  submitted_paper_plots.py
src/exe/: main_mujoco  trajectory  walk
src/include/: Controller.h  Data.h  FSM.h  Leg.h  LocomotionController.h  LocomotionTopLevelControl.h  Math.h  Robot.h  TopLevelControl.h  TrajController.h  Trajectory.h  TrajectoryTopLevelControl.h  Wrapper.h  mujoco_pce_params.h  params.h
src/main/: Controller.cpp  Data.cpp  FSM.cpp  Leg.cpp  LocomotionController.cpp  LocomotionTopLevelControl.cpp  Math.cpp  Robot.cpp  TopLevelControl.cpp  TrajController.cpp  Trajectory.cpp  TrajectoryTopLevelControl.cpp  Wrapper.cpp  dynawalkMujoco.cpp  mainMujoco.cpp  mainMujoco_backup.cpp  trajMujoco.cpp  walkMujoco.cpp
xml/a1/xml/: a1.xml  extra_scene.xml
xml/aliengo/xml/: aliengo.xml  extra_scene.xml
xml/go1/: MJDATA.TXT  MJMODEL.TXT  notes.txt
xml/go1/xml/: extra_scene.xml  go1.xml
xml/laikago/xml/: extra_scene.xml  laikago.xml
xml/template/: hello (copy).xml
xml/unitree_go1/: MJDATA.TXT  MJMODEL.TXT  go1.xml  scene.xml
xml/unitree_go2/: go2.xml  go2_multi.xml  scene.xml  scene_multi.xml
